--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -6,6 +6,7 @@
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
     "@blueprintjs/core": "^3.36.0",
+    "@lourenci/react-kanban": "^1.1.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.20.0",
@@ -23,9 +24,11 @@
     "react-dom": "^16.13.1",
     "react-draggable": "^4.2.0",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.1",
     "regenerator-runtime": "^0.13.5",
     "socket.io-client": "^2.3.1",
     "style-loader": "^1.1.3",
+    "styled-components": "^5.2.1",
     "svg-url-loader": "^5.0.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
