--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.20",
     "path": "^0.12.7",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.2.0",
     "react-router-dom": "^5.2.0",
@@ -53,7 +54,6 @@
   "devDependencies": {
     "eslint": "^7.11.0",
     "eslint-plugin-react": "^7.21.4",
-    "webpack-dev-server": "^3.10.3",
-    "@freelancer-ccg/engine": "^0.0.1"
+    "webpack-dev-server": "^3.10.3"
   }
 }
