--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,7 @@ dist
 
 # TernJS port file
 .tern-port
+packages/creator/package-lock.json
+packages/creator/.DS_Store
+packages/creator/.babelrc
+.DS_Store
