--- a/packages/creator/package.json
+++ b/packages/creator/package.json
@@ -27,8 +27,12 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
     "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
     "brotli-webpack-plugin": "^1.1.0",
+    "install": "^0.13.0",
+    "npm": "^6.14.11",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^16.13.1",
     "react-file-drop": "^3.1.2",
     "react-grid-system": "^7.1.1",
