--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-    "name": "freelancer-workspace",
-    "version": "0.0.1",
-    "private": true,
-    "workspaces": ["packages/*"],
-    "scripts": {
-      "start:server": "cd server && npm start",
-      "start:client": "cd client && npm start",
-      "deploy:client": "cd client && npm run build && gh-pages -d dist",
-      "redis:clear": "redis-cli flushall",
-      "redis:release": "redis-cli del 'lock:queue'"
-    }
+  "name": "freelancer-workspace",
+  "version": "0.0.1",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
+  "scripts": {
+    "start:server": "cd server && npm start",
+    "start:client": "cd client && npm start",
+    "deploy:client": "cd client && npm run build && gh-pages -d dist",
+    "redis:clear": "redis-cli flushall",
+    "redis:release": "redis-cli del 'lock:queue'"
   }
-  
+}
