--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -9,6 +9,7 @@
     "@lourenci/react-kanban": "^1.1.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@sweetalert/with-react": "^0.1.1",
     "axios": "^0.20.0",
     "axios-hooks": "^2.1.0",
     "babel-loader": "^8.1.0",
@@ -26,11 +27,14 @@
     "react-draggable": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
+    "react-toastify": "^6.2.0",
     "regenerator-runtime": "^0.13.5",
     "socket.io-client": "^2.3.1",
     "style-loader": "^1.1.3",
     "styled-components": "^5.2.1",
     "svg-url-loader": "^5.0.0",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^10.13.1",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "worker-loader": "^2.0.0"
