--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -19,6 +19,7 @@
     "html-webpack-plugin": "^4.0.4",
     "immutability-helper": "^3.0.2",
     "jimp": "^0.16.1",
+    "jsdoc": "^3.6.6",
     "lodash": "^4.17.20",
     "path": "^0.12.7",
     "react": "^16.13.1",
