--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@freelancer-ccg/engine",
   "version": "0.0.1",
-  "scripts": {}
+  "scripts": {},
+  "dependencies": {
+    "jsdoc": "^3.6.6"
+  }
 }
