--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,6 +8,7 @@
     "nodemon": "^2.0.5"
   },
   "dependencies": {
+    "@freelancer-ccg/engine": "^0.0.1",
     "body-parser": "^1.19.0",
     "config": "^3.3.2",
     "cookie-parser": "^1.4.5",
@@ -15,11 +16,11 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-socket.io-session": "^1.3.5",
+    "jsdoc": "^3.6.6",
     "lodash": "^4.17.20",
     "pm2": "^4.5.0",
     "redis": "^3.0.2",
     "socket.io": "^2.4.1",
-    "uuid": "^8.3.1",
-    "@freelancer-ccg/engine": "^0.0.1"
+    "uuid": "^8.3.1"
   }
 }
